@@ -1,4 +1,6 @@
 import tipfy
+from tipfy.ext.session import SessionMiddleware
+from tipfy.ext.auth import AuthMiddleware, get_current_user
 
 
 class HomeHandler(tipfy.RequestHandler):
@@ -9,3 +11,16 @@ class HomeHandler(tipfy.RequestHandler):
 class HandlerWithException(tipfy.RequestHandler):
     def get(self, **kwargs):
         raise ValueError('ooops!')
+
+
+class AuthHandler(tipfy.RequestHandler):
+    middleware = [SessionMiddleware, AuthMiddleware]
+
+    def get(self, **kwargs):
+        user = get_current_user()
+        if user:
+            r = 'username=%s' % user.username
+        else:
+            r = 'no user'
+
+        return tipfy.Response(r)
