@@ -11,24 +11,31 @@
 from tipfy import import_string, redirect, Response, url_for
 
 
-def redirect_to(endpoint, method=None, code=302, **kwargs):
+def redirect_to(endpoint, _method=None, _anchor=None, _code=302, **kwargs):
     """Convenience function mixing :func:`redirect` and :func:`url_for`:
     redirects the client to a URL built using a named :class:`Rule`.
 
     :param endpoint:
         The rule endpoint.
-    :param method:
+    :param _method:
         The rule request method, in case there are different rules
         for different request methods.
-    :param code:
+    :param _anchor:
+        An anchor to add to the end of the URL.
+    :param _code:
         The redirect status code.
     :param kwargs:
         Keyword arguments to build the URL.
     :return:
         A ``werkzeug.Response`` object with headers set for redirection.
     """
-    return redirect(url_for(endpoint, full=True, method=method, **kwargs),
-        code=code)
+    # For backwards compatibility, check old keywords.
+    method = kwargs.pop('method', _method)
+    code = kwargs.pop('code', _code)
+
+    url = url_for(endpoint, _full=True, _method=method, _anchor=_anchor,
+        **kwargs)
+    return redirect(url, code=code)
 
 
 def render_json_response(obj):
